# mcp-google-sheets

./: .gitignore  CHATGPT_DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  clientsecretsheetsmcp.txt  docker-compose.yml  env.example  pyproject.toml
deploy/: fly.toml  railway.toml
scripts/: deploy-fly.sh  deploy-railway.sh  setup-credentials.sh
src/mcp_google_sheets/: http_server.py  http_sse_server.py  mcp_http_server.py  security.py  server.py  simple_mcp_server.py  simple_server.py  sse_server.py
