[project]
name = "mcp-google-sheets"
version = "1.0.6"
description = "This MCP server integrates with your Google Drive and Google Sheets, to enable creating and modifying spreadsheets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.5.0",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.117.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]
[[project.authors]]
name = "Xing Wu"
email = "xingwu.cs@gmail.com"

[project.urls]
"Homepage" = "https://github.com/xing5/mcp-google-sheets"
"Bug Tracker" = "https://github.com/xing5/mcp-google-sheets/issues"
"Repository" = "https://github.com/xing5/mcp-google-sheets.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Static version for Docker builds
# For development with dynamic versioning, use: dynamic = ["version"] and uncomment below
# [tool.hatch.version]
# source = "uv-dynamic-versioning"
# 
# [tool.uv-dynamic-versioning]
# pattern = "default"
# strict = true

[project.scripts]
mcp-google-sheets = "mcp_google_sheets:main"
mcp-google-sheets-http = "mcp_google_sheets.http_server:main"
